--- a/pom.xml
+++ b/pom.xml
@@ -28,24 +28,26 @@
  * $Id$
  *
  ******************************************************************************************************************* -->
- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-   
+
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>2.15</version> 
+        <version>2.15</version>
         <relativePath/>
     </parent>
- 
+
     <groupId>it.tidalwave.betterbeansbinding</groupId>
     <artifactId>betterbeansbinding</artifactId>
     <packaging>pom</packaging>
     <version>1.3.1-SNAPSHOT</version>
     <name>BetterBeansBinding</name>
     <description>Keeping JavaBeans in sync.</description>
-    <url>http://betterbeansbinding.kenai.com</url>
+    <!--    <url>http://betterbeansbinding.kenai.com</url>-->
     <inceptionYear>2009</inceptionYear>
 
     <organization>
@@ -54,11 +56,15 @@
     </organization>
 
     <properties>
-        <scm.repo.url>ssh://hg@bitbucket.org/tidalwave/betterbeansbinding-src</scm.repo.url>
-        <scm.repo.readonly.url>https://bitbucket.org/tidalwave/betterbeansbinding-src</scm.repo.readonly.url>
-        <scm.repo.browse.url>https://bitbucket.org/tidalwave/betterbeansbinding-src/src</scm.repo.browse.url>
+        <!--        TODO adjust for github-->
+        <!--        <scm.repo.url>ssh://hg@bitbucket.org/tidalwave/betterbeansbinding-src</scm.repo.url>-->
+        <!--        <scm.repo.readonly.url>https://bitbucket.org/tidalwave/betterbeansbinding-src</scm.repo.readonly.url>-->
+        <!--        <scm.repo.browse.url>https://bitbucket.org/tidalwave/betterbeansbinding-src/src</scm.repo.browse.url>-->
 
-        <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
+        <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6
+            -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide
+            java.*|javax.*
+        </tft.UmlGraphDoc.additionalParam>
 
         <tft.javac.source>1.5</tft.javac.source> <!-- For Android compatibility -->
         <tft.javac.target>1.5</tft.javac.target>
@@ -67,43 +73,46 @@
         <stableAPIVersion>1.3.0</stableAPIVersion>
     </properties>
 
-    <issueManagement>
-        <system>Jira</system>
-        <url>http://kenai.com/jira/browse/BETTERBEANSBINDING</url>
-    </issueManagement>
+    <!--    <issueManagement>-->
+    <!--        <system>Jira</system>-->
+    <!--        <url>http://kenai.com/jira/browse/BETTERBEANSBINDING</url>-->
+    <!--    </issueManagement>-->
 
-    <developers>
-        <developer>
-            <name>Fabrizio Giudici</name>
-            <email>fabrizio.giudici@tidalwave.it</email>
-            <url>http://www.tidalwave.it/people</url>
-            <organization>Tidalwave s.a.s.</organization>
-            <organizationUrl>http://www.tidalwave.it</organizationUrl>
-            <roles>
-                <role>manager</role>
-                <role>developer</role>
-            </roles>
-            <timezone>+1</timezone>
-        </developer>
-    </developers>
 
-    <mailingLists>
-        <mailingList>
-            <name>Continuous Integration</name>
-            <post>ci@betterbeansbinding.kenai.com</post>
-            <archive>http://kenai.com/projects/betterbeansbinding/lists/ci/archive</archive>
-        </mailingList>
-        <mailingList>
-            <name>Developers</name>
-            <post>dev@betterbeansbinding.kenai.com</post>
-            <archive>http://kenai.com/projects/betterbeansbinding/lists/dev/archive</archive>
-        </mailingList>
-        <mailingList>
-            <name>Users</name>
-            <post>users@betterbeansbinding.kenai.com</post>
-            <archive>http://kenai.com/projects/betterbeansbinding/lists/users/archive</archive>
-        </mailingList>
-    </mailingLists>
+    <!--    TODO uncomment to leave original dev credits-->
+    <!--    <developers>-->
+    <!--        <developer>-->
+    <!--            <name>Fabrizio Giudici</name>-->
+    <!--            <email>fabrizio.giudici@tidalwave.it</email>-->
+    <!--            <url>http://www.tidalwave.it/people</url>-->
+    <!--            <organization>Tidalwave s.a.s.</organization>-->
+    <!--            <organizationUrl>http://www.tidalwave.it</organizationUrl>-->
+    <!--            <roles>-->
+    <!--                <role>manager</role>-->
+    <!--                <role>developer</role>-->
+    <!--            </roles>-->
+    <!--            <timezone>+1</timezone>-->
+    <!--        </developer>-->
+    <!--    </developers>-->
+
+    <!--    TODO maybe remove as mailing lists for a non responsive domain seems to just clutter-->
+    <!--    <mailingLists>-->
+    <!--        <mailingList>-->
+    <!--            <name>Continuous Integration</name>-->
+    <!--            <post>ci@betterbeansbinding.kenai.com</post>-->
+    <!--            <archive>http://kenai.com/projects/betterbeansbinding/lists/ci/archive</archive>-->
+    <!--        </mailingList>-->
+    <!--        <mailingList>-->
+    <!--            <name>Developers</name>-->
+    <!--            <post>dev@betterbeansbinding.kenai.com</post>-->
+    <!--            <archive>http://kenai.com/projects/betterbeansbinding/lists/dev/archive</archive>-->
+    <!--        </mailingList>-->
+    <!--        <mailingList>-->
+    <!--            <name>Users</name>-->
+    <!--            <post>users@betterbeansbinding.kenai.com</post>-->
+    <!--            <archive>http://kenai.com/projects/betterbeansbinding/lists/users/archive</archive>-->
+    <!--        </mailingList>-->
+    <!--    </mailingLists>-->
 
     <licenses>
         <license>
@@ -114,6 +123,17 @@
     </licenses>
 
     <repositories>
+
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
         <repository>
             <id>snapshots-oss.sonatype.org</id>
             <name>Sonatype Snapshots Repository</name>
@@ -127,12 +147,13 @@
         </repository>
     </repositories>
 
-    <!-- Repeated because of http://jira.codehaus.org/browse/SCM-442 -->
-    <scm>
-        <connection>scm:hg:${scm.repo.readonly.url}</connection>
-        <developerConnection>scm:hg:${scm.repo.effective.url}</developerConnection>
-        <url>${scm.repo.browse.url}</url>
-    </scm>
+    <!--    TODO is this still needed without CI/CD-->
+    <!--    &lt;!&ndash; Repeated because of http://jira.codehaus.org/browse/SCM-442 &ndash;&gt;-->
+    <!--    <scm>-->
+    <!--        <connection>scm:hg:${scm.repo.readonly.url}</connection>-->
+    <!--        <developerConnection>scm:hg:${scm.repo.effective.url}</developerConnection>-->
+    <!--        <url>${scm.repo.browse.url}</url>-->
+    <!--    </scm>-->
 
     <dependencies>
         <dependency>
@@ -142,21 +163,35 @@
             <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.13.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>it.tidalwave.thesefoolishthings</groupId>
-            <artifactId>it-tidalwave-util-test</artifactId>
-            <version>1.0.27</version>
-            <scope>test</scope>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>it.tidalwave.thesefoolishthings</groupId>-->
+        <!--            <artifactId>it-tidalwave-util-test</artifactId>-->
+        <!--            <version>1.0.27</version>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
@@ -182,44 +217,31 @@
                 </configuration>
             </plugin>
 
-            <!-- Produces the JARs, with OSGi support and the Subversion revision in the Manifest -->
-<!--
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        Needed to put the OSGi stuff 
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                        <manifestEntries>
-                            <Implementation-Build>${buildNumber}</Implementation-Build>
-                        </manifestEntries>
-                        - useDefaultManifestFile>true</useDefaultManifestFile - required since nbm-plugin 3.0
-                    </archive>
-                </configuration>
-            </plugin>
--->
-            <!-- Produces the NBMs for the NetBeans Platform -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>nbm-maven-plugin</artifactId>
-                <extensions>true</extensions>
-            </plugin>
 
-            <!-- Produces the OSGi bundle information. -->
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--            TODO is this even needed-->
+            <!-- Produces the NBMs for the NetBeans Platform -->
+            <!--            <plugin>-->
+            <!--                <groupId>org.codehaus.mojo</groupId>-->
+            <!--                <artifactId>nbm-maven-plugin</artifactId>-->
+            <!--                <extensions>true</extensions>-->
+            <!--            </plugin>-->
+
+
+            <!--            &lt;!&ndash; Produces the OSGi bundle information. &ndash;&gt;-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.felix</groupId>-->
+            <!--                <artifactId>maven-bundle-plugin</artifactId>-->
+            <!--                <extensions>true</extensions>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>bundle-manifest</id>-->
+            <!--                        <phase>process-classes</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>manifest</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
